# ADCL

./: INSTALL.sx8  LICENSE  Makefile  Makefile.defs  Makefile.defs.in  Makefile.in  README.md  TestCreateSubArray.c  configure  configure.in  configure.in.Eric
adcl/C/: ADCL.c  ADCL_Request.c  ADCL_Vector.c  Makefile
adcl/f90/: ADCL_Request_f.c  ADCL_Vector_f.c  ADCL_f.c  Makefile
autom4te.cache/: output.0  traces.0
config/: config.adcl  config.adcl.Allgatherv_bruck  config.adcl.Allgatherv_linear  config.adcl.Allgatherv_native  config.adcl.Allgatherv_neighbor_exchange  config.adcl.Allgatherv_recursive_doubling  config.adcl.Allgatherv_ring  config.adcl.Allreduce_linear  config.adcl.Allreduce_native  config.adcl.Allreduce_nonoverlapping  config.adcl.Allreduce_recursive_doubling  config.adcl.Allreduce_ring  config.adcl.Ialltoall_diss  config.adcl.Ialltoall_linear  config.adcl.Ialltoall_pairwise  config.adcl.Ibcast_binomial_128  config.adcl.Ibcast_binomial_32  config.adcl.Ibcast_binomial_64  config.adcl.Ibcast_generic_1_128  config.adcl.Ibcast_generic_1_32  config.adcl.Ibcast_generic_1_64  config.adcl.Ibcast_generic_2_128  config.adcl.Ibcast_generic_2_32  config.adcl.Ibcast_generic_2_64  config.adcl.Ibcast_generic_3_128  config.adcl.Ibcast_generic_3_32  config.adcl.Ibcast_generic_3_64  config.adcl.Ibcast_generic_4_128  config.adcl.Ibcast_generic_4_32  config.adcl.Ibcast_generic_4_64  config.adcl.Ibcast_generic_5_128  config.adcl.Ibcast_generic_5_32  config.adcl.Ibcast_generic_5_64  config.adcl.Ibcast_linear_128  config.adcl.Ibcast_linear_32  config.adcl.Ibcast_linear_64  config.adcl.IsIr_aao  config.adcl.SIr_pair_pack  config.adcl.brute  config.adcl.hypo  (+1 more)
contrib/: Makefile  svm-scale.c  svm.cpp
doc/: Makefile  adcl-installation-and-usage.tex  adcl-spec.tex  attribute.tex  configuration.tex  environment.tex  function.tex  gui.tex  highlevel.tex  historic.tex  installation.tex  introduction.tex  request.tex  timer.tex  title.tex  topology.tex  vector.tex
include/: ADCL.h  ADCL.inc  ADCL_allgatherv.h  ADCL_allreduce.h  ADCL_alltoall.h  ADCL_array.h  ADCL_attribute.h  ADCL_bcast.h  ADCL_change.h  ADCL_config.h  ADCL_config.h.in  ADCL_data.h  ADCL_display.h  ADCL_dummy_mpi.h  ADCL_emethod.h  ADCL_fnctgrp.h  ADCL_fnctset.h  ADCL_fprototypes.h  ADCL_function.h  ADCL_hist.h  ADCL_hist_internal.h  ADCL_iallgather.h  ADCL_ialltoall.h  ADCL_ibcast.h  ADCL_internal.h  ADCL_ireduce.h  ADCL_memory.h  ADCL_method.h  ADCL_nbc.h  ADCL_packunpack.h  ADCL_papi.h  ADCL_predefined.h  ADCL_reduce.h  ADCL_reduce_topo.h  ADCL_request.h  ADCL_statistics.h  ADCL_subarray.h  ADCL_sysconfig.h.in  ADCL_timer.h  ADCL_topology.h  (+2 more)
src/: ADCL.c  ADCL_array.c  ADCL_change.c  ADCL_change_sb_aao.c  ADCL_change_sb_pair.c  ADCL_emethod.c  ADCL_memory.c  ADCL_memory_backend.c  ADCL_method.c  ADCL_packunpack.c  ADCL_printf.c  ADCL_request.c  ADCL_subarray.c  ADCL_vector.c  Makefile
src/communication/: ADCL_allgatherv_bruck.c  ADCL_allgatherv_linear.c  ADCL_allgatherv_native.c  ADCL_allgatherv_neighborexchange.c  ADCL_allgatherv_recursivedoubling.c  ADCL_allgatherv_ring.c  ADCL_allgatherv_two_procs.c  ADCL_allreduce_linear.c  ADCL_allreduce_native.c  ADCL_allreduce_nonoverlapping.c  ADCL_allreduce_recursivedoubling.c  ADCL_allreduce_ring.c  ADCL_alltoall_bruck.c  ADCL_alltoall_ladd.c  ADCL_alltoall_linear.c  ADCL_alltoall_linear_sync.c  ADCL_alltoall_native.c  ADCL_alltoall_pairwise.c  ADCL_alltoall_pairwise_excl.c  ADCL_alltoallv_linear.c  ADCL_alltoallv_native.c  ADCL_alltoallv_pairwise.c  ADCL_bcast_linear.c  ADCL_change_sb_aao.c  ADCL_change_sb_pair.c  ADCL_iallgather.c  ADCL_ialltoall.c  ADCL_ibcast.c  ADCL_ireduce.c  ADCL_reduce_binary.c  ADCL_reduce_binomial.c  ADCL_reduce_chain.c  ADCL_reduce_generic.c  ADCL_reduce_in_order_binary.c  ADCL_reduce_linear.c  ADCL_reduce_native.c  ADCL_reduce_pipeline.c  Makefile  Makefile.in
src/dummympi/: ADCL_mpi.c  Makefile  mpi.h
src/framework/: ADCL_array.c  ADCL_attribute.c  ADCL_contigous.c  ADCL_data.c  ADCL_display.c  ADCL_emethod.c  ADCL_fnctgrp.c  ADCL_fnctset.c  ADCL_function.c  ADCL_hist.c  ADCL_hist_cluster.c  ADCL_hist_learn.c  ADCL_hypothesis.c  ADCL_indexed.c  ADCL_method.c  ADCL_packunpack.c  ADCL_papi.c  ADCL_predefined.c  ADCL_predefined_allgatherv.c  ADCL_predefined_allreduce.c  ADCL_predefined_alltoall.c  ADCL_predefined_alltoallv.c  ADCL_predefined_iallgather.c  ADCL_predefined_ialltoall.c  ADCL_predefined_ibcast.c  ADCL_predefined_ireduce.c  ADCL_predefined_reduce.c  ADCL_printf.c  ADCL_readenv.c  ADCL_reduce.c  ADCL_request.c  ADCL_statistics.c  ADCL_subarray.c  ADCL_timer.c  ADCL_topology.c  ADCL_twok.c  ADCL_vector.c  ADCL_vmap.c  Makefile  Makefile.in
src/memory/: ADCL_memory.c  ADCL_memory_backend.c  Makefile
src/mpi/: Type_create_subarray.c
test/: Makefile  PbSizes_1D.c  PbSizes_2D.c  PbSizes_3D.c  attrs_1.c  attrs_2.c  attrs_3.c  attrs_3a.c  attrs_4.c  aux-data-1D.c  aux-data-2D-f.f90  aux-data-2D.c  aux-data-3D.c  aux-data-3D_f.f90  aux-data-4D.c  aux-data-4D_f.f90  data_1.c  first  first.c  first_f.f90  fourth.c  ialltoall.c  ibcast.c  one-dim-f.f90  one-dim.c  second.c  second_f.f90  test-fnctset-allgatherv-1d.c  test-fnctset-allgatherv_f.f90  test-fnctset-allreduce.c  test-fnctset-allreduce_f.f90  test-fnctset-alltoallv-1d.c  test-fnctset-extneigh-2d.c  test-fnctset-extneigh-2d_f.f90  test-fnctset-extneigh-3d.c  test-fnctset-extneigh-3d_f.f90  test-fnctset-iallgather.c  test-fnctset-ialltoall.c  test-fnctset-ireduce.c  test-fnctset-noattrs.c  (+19 more)
test/ATF/: ADCL_Global.h  ATF.h  ATF_Adcl_global.h  ATF_Change_Init.c  ATF_Change_fcfs.c  ATF_Display_Result.h  ATF_Display_result.c  ATF_Free_matrix.c  ATF_Get.c  ATF_Init.c  ATF_Init_matrix.c  ATF_Main.c  (+17 more)
utils/: ADCL.xsl  Makefile  Makefile.in  attr_test_generator.c  calc_statistics_methods.c  cluster.c  cluster_data.c  data.h  evaluate_statistical_methods.c  genscript.c  gentex.c  iterations.c  minmax.c  minmax.h  minmax_generic.c  minmax_generic.h  minmax_generic_early_stopping.c  minmax_generic_parse_file.c  minmax_generic_parse_file.h  robust.c  split.c  test.c  votingrecord.c
(+157 files in other folders)
